<resources>
    <string name="app_name">RandomX</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="home">Main</string>

    <string name="seeonline">Whos online ?</string>
    <string name="creatematch">Create a Match</string>
    <string name="joinmatch">GO!</string>
    <string name="tryagain">Try Again</string>
    <string name="mmatchPrice">Match Price</string>
    <string name="profile">View Profile</string>
    <string name="matchprice">Match Price</string>
    <string name="yourNum">Number</string>
    <string name="AddTool">Add</string>
    <string name="UserName">   Enter User Name  </string>
    <string name="AddPassword">  Enter Password </string>
    <string name="Login"> Login  </string>
    <string name="NewUser"> New User  </string>
    <string name="Email"> Enter Email</string>
    <string name="PhoneNumber">    Enter Phone Number</string>
    <string name="back">Back</string>
    <string name="no_more_result">  no more result   </string>
    <string name="nonetworkConnection"> No internet connection    </string>
    <string name="Emailu">  Email  </string>
    <string name="PhoneNumberu">   Phone number</string>
    <string name="MsgnoOnlineMatches"> There is No Online Matches</string>
    <string name="RepeatPassword">      Enter password again</string>
    <string name="NotherOffer">  No Other Result </string>
    <string name="sendpassowrd"> Send Password </string>
    <string name="recoverpassowr">Forgot your password </string>
    <string name="Addemail">Enter your email</string>
    <string name="action_settings">Settings</string>
    <string name="addUser">Save </string>
    <string name="AddAllinfo">Enter All information</string>
    <string name="PasswordNotCorrect">Password does not match</string>
    <string name="EmailNotCorrect">Email is not correct</string>
    <string name="title_activity_login">Login</string>
</resources>
