<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88d2ee"

    tools:context=".Login">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/whitebackground">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#84cee9"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="30dp">

            <LinearLayout
                android:id="@+id/LLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="40sp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical"
                    android:touchscreenBlocksFocus="false">

                    <EditText
                        android:id="@+id/EDTUserName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/UserName"
                        android:inputType="text"
                        android:maxLength="50"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:textColor="#ff1a102c"
                        android:textSize="18dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical"
                    android:touchscreenBlocksFocus="false">

                    <EditText
                        android:id="@+id/EDTpassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/AddPassword"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:paddingBottom="9dp"
                        android:paddingTop="9dp"
                        android:textColor="#ff1a102c"
                        android:textSize="18sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center">


                <Button
                    android:id="@+id/bulogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"

                    android:layout_weight="0"
                    android:background="@drawable/buttonblue"
                    android:drawablePadding="4dp"
                    android:drawableRight="@drawable/newsa"
                    android:onClick="buloginckic"
                    android:text="@string/Login"
                    android:textColor="#ff06071c" />

                <Button
                    android:id="@+id/BuSaveSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"

                    android:layout_weight="0"
                    android:background="@drawable/buttonblue"
                    android:drawablePadding="4dp"
                    android:drawableRight="@drawable/add"
                    android:onClick="burigsterclick"
                    android:text="@string/NewUser"
                    android:textColor="#ff06071c" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
